--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
   <script src='./scripts/Tooltip.js'></script>
   <script src='./scripts/HeatPointChart.js'></script>
   <script src='./scripts/drawBbox.js'></script>
+  <script src='./scripts/InteractionOverlay.js'></script>
   <script src='./scripts/VideoHeatmap.js'></script>
   <script src='./scripts/StackedBarChart.js'></script>
   <script src='./scripts/CircularAOI.js'></script>
   <script src='./scripts/CircularDataCoverage.js'></script>
   <script src='./scripts/CircularActionSequences.js'></script>
   <script src='./scripts/LineChart.js'></script>
+  <script src='./scripts/brushOverlay.js'></script>
+  <script src='./scripts/AOIQuilt.js'></script>
 
 
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
@@ -34,32 +37,29 @@
   <div class='row'>
 
     <!-- dataset picker -->
-    <div class='row'>
+    <!-- <div class='row'>
       <span>Dataset: </span>
-      <select id='dataset' onchange='onDatasetChange()'>
-        <option value='CPV-A'>CPV-A</option>
-        <option value='CPV-B'>CPV-B</option>
-        <option value='CPV-C'>CPV-C</option>
-        <option value='CPV-D'>CPV-D</option>
-        <option value='CPV-E'>CPV-E</option>
-        <option value='CPV-F'>CPV-F</option>
-        <option value='CPV-G'>CPV-G</option>
-        <option value='CPV-H'>CPV-H</option>
-        <option value='CPV-I'>CPV-I</option>
-        <option value='CPV-J'>CPV-J</option>
+      <select id='dataset' onchange='switchSet()'>
+        <option value='0'>CPV-A</option>
+        <option value='1'>CPV-B</option>
+        <option value='2'>CPV-C</option>
+        <option value='3'>CPV-D</option>
+        <option value='4'>CPV-E</option>
+        <option value='5'>CPV-F</option>
+        <option value='6'>CPV-G</option>
+        <option value='7'>CPV-H</option>
+        <option value='8'>CPV-I</option>
+        <option value='9'>CPV-J</option>
       </select>
-    </div>
+    </div> -->
 
     <div class='row'>
       <div class='four columns'>
-        <div id='app-context-container'>
-          <div id='app-context'>
-            <img id='app-img' src='app.png' />
-            <svg id='bbox-overlay'></svg>
-          </div>
+        <div class='row'>
+          <div id='aoiQuilt'></div>
         </div>
       </div>
-      <div class='eight columns'>
+      <div class='eight columns relative-container' id='brush-container'>
         <div class='row'>
           <div id='interactionStackedChart'></div>
         </div>
@@ -69,18 +69,24 @@
         <div class='row'>
           <svg height='60' id='dataCoverageSparkLine'></svg>
         </div>
+        <svg id='brush-overlay'></svg>
       </div>
     </div>
 
     <div class='row'>
       <div class='row'>
         <div class='four columns'>
-          <svg id='aoi' height='480'></svg>
-          <h5 class='centered'>Area of Interest</h5>
+          <div id='app-context-container'>
+            <div id='app-context'>
+              <img id='app-img' src='app.png' />
+              <svg id='bbox-overlay'></svg>
+              <canvas id='interaction-overlay'></canvas>
+            </div>
+          </div>
         </div>
         <div class='four columns'>
-          <svg id='datacoverage' height='480'></svg>
-          <h5 class='centered'>User Data Filters</h5>
+          <svg id='aoi' height='480'></svg>
+          <h5 class='centered'>Area of Interest</h5>
         </div>
         <div class='four columns'>
           <svg id='as' height='480'></svg>
@@ -101,27 +107,36 @@
   </div> -->
 
   <script>
+  var ids = ['CPV-A', 'CPV-B', 'CPV-C', 'CPV-D', 'CPV-E', 'CPV-F', 'CPV-G', 'CPV-G', 'CPV-I', 'CPV-J']
+  // var ids = ['CPV-A', 'CPV-B']
 
   var classKeys = ['overviewHist', 'detailHist', 'graph', 'table', 'offices']
 
   var bounds = false
 
   // var videoHeatmap = VideoHeatmap(document.getElementById('video-overlay'), document.getElementById('user-video'))
+  var nbMargin = {
+    top: 12,
+    left: 45,
+    bottom: 0,
+    right: 0
+  }
+
   var stackedInteractionChart = StackedBarChart(d3.select('#interactionStackedChart'))
     .keys(classKeys)
+    .margin(nbMargin)
+    .enableXAxis(false)
+    .enableYAxis(false)
     .title('Interaction AOI')
-    .onBrushDrag(function (e, extent) {
-      bounds = extent
-      drawCharts()
-    })
-    .onBrushClick(function () {
-      bounds = false
-      drawCharts()
-    })
 
   var stackedEyeChart = new StackedBarChart(d3.select('#eyeStackedChart'))
     .keys(classKeys)
+    .margin(nbMargin)
+    .enableXAxis(false)
+    .enableYAxis(false)
     .title('Gaze AOI')
+
+  var brushOverlay = new BrushOverlay(d3.select('#brush-container'))
     .onBrushDrag(function (e, extent) {
       bounds = extent
       drawCharts()
@@ -131,8 +146,15 @@
       drawCharts()
     })
 
-  var eyeData = []
-  var mouseData = []
+  var aoiQuilt = new AOIQuilt(d3.select('#aoiQuilt'))
+    .clickHandler(function (index) {
+      selected = dataTable[index]
+
+      updateSet()
+    })
+
+  var dataTable = []
+  var selected = null
 
   function resize() {
     _.delay(function () {
@@ -142,11 +164,14 @@
       stackedEyeChart
         .resizeFunc()
         .update()
+      brushOverlay
+        .resizeFunc()
+        .update()
       drawCharts()
     }, 500)
   }
 
-  document.addEventListener('data-loaded', function () {
+  document.addEventListener('loaded-all', function () {
     // var video = document.getElementById('user-video')
     // video.pause()
     //
@@ -158,43 +183,83 @@
     //
     //
     // video.play()
-    bounds = false
-    stackedInteractionChart
-      .data(timeBinInteractionData(mouseData, 90))
-      .update()
-    stackedEyeChart
-      .data(timeBinEyeData(eyeData, 90))
-      .update()
-    drawLineChart(numFiltersOverTime(mouseData))
-    drawCharts()
+    selected = dataTable[0]
 
+    aoiQuilt
+      .data(dataTable)
+      .update()
+
+    updateSet()
     document.getElementById('loader').style.display = 'none'
   })
 
   function drawCharts () {
-    drawCircularAOI(convertDataForAOI(mouseData, bounds), classKeys)
-    drawDataCoverage(convertDataForCoverage(mouseData, bounds))
-    drawCircularActionSequence(convertDataForActionSequence(mouseData, bounds), mouseData, bounds)
+    ioSetBounds(bounds)
+    drawCircularAOI(convertDataForAOI(selected.loadedMouse, bounds), classKeys)
+    drawCircularActionSequence(convertDataForActionSequence(selected.loadedMouse, bounds), selected.loadedMouse, bounds)
   }
 
-  function onDatasetChange () {
-    loadData(document.getElementById('dataset').value)
+  function switchSet () {
+    selected = dataTable[+document.getElementById('dataset').value]
+
+    updateSet()
   }
 
-  function loadData (value) {
+  function updateSet () {
+    bounds = false
+    ioSetData(selected.loadedMouse)
+
+    stackedInteractionChart
+      .data(selected.mouseTimeBin)
+      .xDomain([0, selected.xMax])
+      .update()
+    stackedEyeChart
+      .data(selected.eyeTimeBin)
+      .xDomain([0, selected.xMax])
+      .update()
+    brushOverlay
+      .xDomain([0, selected.xMax])
+      .update()
+    drawLineChart(selected.filterTimeBin, [0, selected.xMax])
+    drawCharts()
+  }
+
+  function loadAll (values) {
     document.getElementById('loader').style.display = 'block'
-    d3.text('data/eye/' + value + '.csv', function(eye) {
-      eyeData = d3.csvParse('status,x,y,time,aoi\n' + eye)
-      timeBinEyeData(eyeData)
-      d3.json('data/mouse/' + value + '.json', function (mouse) {
-        mouseData = mouse
 
-        document.dispatchEvent(new Event('data-loaded'))
+    function loadHelper (index) {
+      var p = {}
+      p.index = index
+      p.id = values[index]
+      d3.text('data/eye/' + values[index] + '.csv', function(eye) {
+        p.loadedEye = d3.csvParse('status,x,y,time,aoi\n' + eye)
+        p.eyeTimeBin = timeBinEyeData(p.loadedEye, 90)
+        d3.json('data/mouse/' + values[index] + '.json', function (mouse) {
+          p.loadedMouse = mouse
+          p.mouseTimeBin = timeBinInteractionData(p.loadedMouse, 90)
+          p.filterTimeBin = numFiltersOverTime(p.loadedMouse)
+
+          p.xMax = Math.max(
+            d3.max(p.mouseTimeBin, function (d) { return d.endTime }),
+            d3.max(p.eyeTimeBin, function (d) { return d.endTime })
+          )
+
+          dataTable.push(p)
+
+          if (index === values.length - 1) {
+            document.dispatchEvent(new Event('loaded-all'))
+          } else {
+            loadHelper(index + 1)
+          }
+        })
       })
-    })
+    }
+
+    loadHelper(0)
   }
 
-  loadData('CPV-A')
+  loadAll(ids)
   drawBbox(bboxArray)
+  drawInteractionOverlay()
   </script>
 </body>
