--- a/VideoHeatmap.html
+++ b/VideoHeatmap.html
@@ -27,7 +27,7 @@
 
   <ul>
     <li><a class='active' href='VideoHeatmap.html'>Video Heatmap</a></li>
-    <li><a href='OverViewDetail.html'>Overview + Detail</a></li>
+    <li><a href='OverviewDetail.html'>Overview + Detail</a></li>
     <li><a href='Contextual.html'>Contextualized</a></li>
     <li class='pull-right'>
       <select class='dd' id='dataset' onchange='switchSet()'>
