--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset='UTF-8'>
         <meta http-equiv='refresh' content='1; url=OverviewDetail.html'>
         <script type='text/javascript'>
-            window.location.href = 'VideoHeatmap.html'
+            window.location.href = 'SegmentedHeatmap.html'
         </script>
         <title>Page Redirection</title>
     </head>
